@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/wxwidgets.eclass,v 1.38 2013/12/30 08:25:35 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/wxwidgets.eclass,v 1.39 2014/04/21 21:55:31 ottxor Exp $
 
 # @ECLASS:			wxwidgets.eclass
 # @MAINTAINER:
@@ -59,7 +59,7 @@ inherit eutils multilib
 # inheriting.
 if [[ -z ${WX_CONFIG} ]]; then
 	if [[ -n ${WX_GTK_VER} ]]; then
-		for wxtoolkit in gtk2 base; do
+		for wxtoolkit in mac gtk2 base; do
 			# newer versions don't have a seperate debug profile
 			for wxdebug in xxx release- debug-; do
 				wxconf="${wxtoolkit}-unicode-${wxdebug/xxx/}${WX_GTK_VER}"
@@ -109,7 +109,9 @@ need-wxwidgets() {
 	esac
 
 	# wxbase is provided by both gtk2 and base installations
-	if has_version "x11-libs/wxGTK:${WX_GTK_VER}[X]"; then
+	if has_version "x11-libs/wxGTK:${WX_GTK_VER}[aqua]"; then
+		wxtoolkit="mac"
+	elif has_version "x11-libs/wxGTK:${WX_GTK_VER}[X]"; then
 		wxtoolkit="gtk2"
 	else
 		wxtoolkit="base"
